# python-projects

./: README.md
.github/workflows/: page_notifier_ci.yaml
page_notifier/: README.md  items.py  links.json  middlewares.py  pipelines.py  pyproject.toml  scrapy.cfg  settings.py
page_notifier/libs/: yaml_parser.py
page_notifier/spiders/: links_spider.py
page_notifier/tests/: test_links.yaml  test_yaml_parser.py
